Correcting the Dropdown menu and Darkmode

--- a/jobmate_ai legendary version🐉/cv-builder.html
+++ b/jobmate_ai legendary version🐉/cv-builder.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Resume Builder | JobMate AI</title>
   <link rel="stylesheet" href="style.css"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="../imgs/Logo.png">
+  <link rel="icon" type="image/png" sizes="32x50" href="../imgs/Logo.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     // Lightweight readiness check
@@ -30,7 +30,7 @@
       <li id="userSection" style="display:none;">
         <div class="dropdown">
           <span id="userName"></span>
-          <button class="dropbtn">⚙️</button>
+          <button class="dropbtn"><img src="../imgs/Logo.png" alt="..."/></button>
           <div class="dropdown-content">
             <div class="theme-toggle">
               <label>
