--- a/jobmate_ai legendary version🐉/signup.html
+++ b/jobmate_ai legendary version🐉/signup.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign Up | JobMate AI</title>
   <link rel="stylesheet" href="style.css"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="../imgs/Logo.png">
+  <link rel="icon" type="image/png" sizes="32x50" href="../imgs/Logo.png">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -44,7 +44,7 @@
       <p style="text-align:center; margin-top:1rem;">
         Already have an account? <a href="signin.html">Sign In</a>
       </p>
-      <div id="signupResult" class="results"></div>
+      <div id="signupResult" style="color: black" class="results"></div>
     </section>
   </div>
 </body>
