--- a/jobmate_ai legendary version🐉/how-to-find-job.html
+++ b/jobmate_ai legendary version🐉/how-to-find-job.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Find Your Fit | JobMate AI</title>
   <link rel="stylesheet" href="style.css"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="../imgs/Logo.png">
+  <link rel="icon" type="image/png" sizes="32x50" href="../imgs/Logo.png">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -25,7 +25,7 @@
       <li id="userSection" style="display:none;">
         <div class="dropdown">
           <span id="userName"></span>
-          <button class="dropbtn">⚙️</button>
+          <button class="dropbtn"><img src="../imgs/Logo.png" alt="..."/></button>
           <div class="dropdown-content">
             <div class="theme-toggle">
               <label>
