--- a/jobmate_ai legendary version🐉/signin.html
+++ b/jobmate_ai legendary version🐉/signin.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign In | JobMate AI</title>
   <link rel="stylesheet" href="style.css"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="../imgs/Logo.png">
+  <link rel="icon" type="image/png" sizes="32x50" href="../imgs/Logo.png">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -42,7 +42,7 @@
       <p style="text-align:center; margin-top:1rem;">
         Don't have an account? <a href="signup.html">Sign Up</a>
       </p>
-      <div id="signinResult" class="results"></div>
+      <div id="signinResult" style="color: black" class="results"></div>
     </section>
   </div>
 </body>
