--- a/jobmate_ai legendary version🐉/interview.html
+++ b/jobmate_ai legendary version🐉/interview.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Interview Practice | JobMate AI</title>
+  <title data-i18n="interviewTitle">Interview Practice | JobMate AI</title>
   <link rel="stylesheet" href="style.css"/>
   <link rel="icon" type="image/png" sizes="32x50" href="../imgs/Logo.png">
   <script defer src="script.js"></script>
 </head>
 <body>
   <nav class="navbar">
-    <div class="nav-logo">JobMate AI</div>
+    <div class="nav-logo" data-i18n="appName">JobMate AI</div>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="job-matcher.html">Jobs</a></li>
-      <li><a href="courses.html">Courses</a></li>
-      <li><a href="interview.html">Interview</a></li>
-      <li><a href="how-to-find-job.html">How to Find a Job</a></li>
-      <li><a href="cv-builder.html">Resume Builder</a></li>
+      <li><a href="index.html" data-i18n="home">Home</a></li>
+      <li><a href="job-matcher.html" data-i18n="jobs">Jobs</a></li>
+      <li><a href="courses.html" data-i18n="courses">Courses</a></li>
+      <li><a href="interview.html" data-i18n="interview">Interview</a></li>
+      <li><a href="how-to-find-job.html" data-i18n="findJob">How to Find a Job</a></li>
+      <li><a href="cv-builder.html" data-i18n="resume">Resume Builder</a></li>
       <li id="authLinks">
-        <a href="signin.html">Sign In</a> |
-        <a href="signup.html">Sign Up</a>
+        <a href="signin.html" data-i18n="signIn">Sign In</a> |
+        <a href="signup.html" data-i18n="signUp">Sign Up</a>
       </li>
       <li id="userSection" style="display:none;">
         <div class="dropdown">
@@ -30,10 +30,10 @@
             <div class="theme-toggle">
               <label>
                 <input type="checkbox" id="themeSwitch">
-                🌙 Dark Mode
+                <span data-i18n="darkMode"> Dark Mode</span>
               </label>
             </div>
-            <a href="#" id="logoutBtn">Log Out</a>
+            <a href="#" id="logoutBtn" data-i18n="logOut">Log Out</a>
           </div>
         </div>
       </li>
@@ -42,14 +42,18 @@
 
   <div class="container" style="max-width:820px;">
     <section class="feature-section">
-      <h1><span class="feature-icon">🎤</span> Interview Practice</h1>
+      <h1><span class="feature-icon"></span> <span style="color:white" data-i18n="interviewPractice">Interview Practice</span></h1>
       <div class="chat-window">
         <div id="chatMessages" class="chat-messages" aria-live="polite"></div>
         <div class="chat-controls">
-          <input id="chatInput" type="text" placeholder="Answer the question..."/>
-          <button id="sendBtn" type="button">Send</button>
+          <input
+            id="chatInput"
+            type="text"
+            data-i18n-placeholder="answerPlaceholder"
+            placeholder="Answer the question..."/>
+          <button id="sendBtn" type="button" data-i18n="send">Send</button>
         </div>
-        <button id="newQuestionBtn" class="cta-btn secondary" type="button">New Question</button>
+        <button id="newQuestionBtn" class="cta-btn secondary" type="button" data-i18n="newQuestion">New Question</button>
       </div>
     </section>
   </div>
